--- a/meuProjetoFrontEnd/package.json
+++ b/meuProjetoFrontEnd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meu-projeto-front-end",
-  "version": "0.0.0",
+  "version": "1.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.0",
     "update": "^0.7.4",
     "zone.js": "^0.8.26"
   },
